--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -1,10 +1,27 @@
-html,body{
-    height: 100%;
-    @include flexColumn;
+html,
+body {
+  height: 100%;
+  @include flexColumn;
 }
-a{
-    &:active,&:hover,&:link,&:visited{
-        color: $baseFontColor;
-        text-decoration: none;
-    }
+
+a {
+  &:active,
+  &:hover,
+  &:link,
+  &:visited {
+    color: $baseFontColor;
+    text-decoration: none;
+  }
+}
+
+.blur {
+//   filter: url(blur.svg#blur);
+  /* FireFox, Chrome, Opera */
+  -webkit-filter: blur(10px);
+  /* Chrome, Opera */
+  -moz-filter: blur(10px);
+  -ms-filter: blur(10px);
+  filter: blur(10px);
+  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=10, MakeShadow=false);
+  /* IE6~IE9 */
 }
