--- a/src/assets/sass/reset-ui.scss
+++ b/src/assets/sass/reset-ui.scss
@@ -2,25 +2,20 @@
 
 .mint-button {
   height: .917874rem;
-  @include font-dpr(14px);
+  border:3px solid $baseColor;
+  background: transparent;
+  @include font-dpr(16px);
+  color: $baseColor;
+  border-radius: .402576rem;
 }
-
-.mint-button--default {
-  padding: 0;
-  background: #ffffff;
-  border: 3px solid #c9c9ca;
-  box-shadow: none;
-}
-
-.mint-button--default:active {
-    background: #c9c9ca;
-    
-  .mint-button-text {
-    color: #ffffff;
-  }
+.mint-button--default:active{
+  background: $baseColor;
+  color: #ffffff;
 }
 .mint-button:not(.is-disabled):active::after{
-    opacity: 0;
+  opacity: 0;
 }
-
-
+.mint-button--default {
+  padding: 0;
+  box-shadow: none;
+}
