--- a/src/assets/sass/mixin.scss
+++ b/src/assets/sass/mixin.scss
@@ -14,6 +14,14 @@
         font-size: $font-size * 3;
     }
 }
+
+@mixin text-overflow(){
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
 /* flex垂直水平居中 */
 @mixin flexCenter{
     display: flex;
@@ -31,4 +39,6 @@
     flex: auto;
     flex-direction: column;
 }
+
+
 
